# tupla

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO
data/artificial/: .gitignore  README  md5sums
data/largetext/: .gitignore
data/marzini/: .gitignore  README  md5sums
data/pseudo-real/: .gitignore  md5sums
data/trivial/: .gitignore
src/: .gitignore  CMakeLists.txt  doubling_task.hpp  main.cpp  numdefs.hpp  sortpar.cpp  sortpar.hpp  sortseq.cpp  sortseq.hpp  suffixsort.cpp  suffixsort.hpp  sup.cpp  sup.hpp  supgrep.cpp  suptest.cpp  tqsort_task.hpp  tupla.cpp  tupla.hpp  tuplatest.cpp
test/: .gitignore  annotate.pl  runbench.pl
